//
// ACTOR
//

model Actor {
  id    String @id @default(uuid())
  name  String
  email String @unique

  role        Role          @default(CITIZEN)
  status      AccountStatus @default(ACTIVE)
  citizenType CitizenType   @default(REGULAR)

  engagementScore Int      @default(0)
  lastInboxRead   DateTime @default(now())

  openReportsCount          Int           @default(0)
  activeInvestigationsCount Int           @default(0)
  statusReason              StatusReason?
  statusReasonDetails       String?

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  reports                  Report[]        @relation("CitizenReports")
  journalistInvestigations Investigation[] @relation("JournalistInvestigations")
  workflowAudits           WorkflowAudit[] @relation("WorkflowAuditAuthor")
  approvedPublications     Publication[]   @relation("DirectorApprovals")
  submittedEvidence        Evidence[]      @relation("WatcherEvidenceAuthor")
  notifications            Notification[]  @relation("ActorNotifications")
  createdInboxSubjects     InboxSubject[]  @relation("InboxSubjectCreator")

  watcherApplications WatcherApplication[] @relation("WatcherApplicationAuthor")

  reportMedia        ReportMedia[]
  investigationMedia InvestigationMedia[]
  evidenceMedia      EvidenceMedia[]
  inboxSubjectMedia  InboxSubjectMedia[]

  correction    Correction[]    @relation("DirectorCorrections")
  VerifiedMedia VerifiedMedia[]
  VerifiedLink  VerifiedLink[]
  authLink      AuthLink?

  @@map("actors")
}
